# estructura-de-control_secuenciales

./: .commitlintrc.yaml  .cz.toml  .editorconfig  .pre-commit-config.yaml  .pylintrc  .yamllint  README  pyproject.toml  ruff.toml
.github/workflows/: bumpversion.yaml  codeql.yml  commit-check.yaml  commitlint.yml  issue-labeler.yml  labeler.yml  lint.yml
src/: activity_1.py  activity_10.py  activity_2.py  activity_2_v2.py  activity_3.py  activity_4.py  activity_5.py  activity_6.py  activity_7.py  activity_8.py  activity_9.py
